Bug 238840 - System Settings->Task Scheduler looses Tasks entries between sessions
Summary: System Settings->Task Scheduler looses Tasks entries between sessions
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (show other bugs)
Version: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
: 181270 213388 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-26 01:29 UTC by Rainer Klein
Modified: 2010-10-20 15:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Klein 2010-05-26 01:29:20 UTC
Version:           0.2 (using KDE 4.4.3) 
OS:                Linux

The 'Task Scheduler' does not store any tasks and looses all entries as soon as leaving the program.

Reproducible: Didn't try

Steps to Reproduce:
Enter any new task, and press 'Apply'. While one can use the right mouse button menu to run the task once, no entries are stored permanently. After going back to System Settings and re-entering the program all entered task disappeared.

Actual Results:  
The program is useless to configure personal 'cron' jobs.


OS: Linux (x86_64) release 2.6.31.12-0.2-desktop
Compiler: gcc
Comment 1 Rainer Klein 2010-05-26 13:39:05 UTC
Please correct. The error has occurred in KDE 4.35. I've just updated to version 4.4.3. which looks fine.
Comment 2 Rainer Klein 2010-05-27 06:46:42 UTC
I have narrowed the error down. The failure is related to access right changes for crontab in openSUSE 11.2. Users now have to be a member of group 'trusted' to even access their own personal crontab area. 

As an idea to improvet the Task Scheduler, it would be helpful if any crontab error is reflected at the GUI level and the user is made aware of it.
Comment 3 Christoph Feck 2010-10-20 13:30:24 UTC
*** Bug 181270 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-10-20 13:30:55 UTC
*** Bug 213388 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-10-20 13:37:11 UTC
Yes, it probably is a permission problem, because it works fine here (openSUSE 11.3). If this does not work on your setup, please ask on a forum how to correctly setup "cron" and "crontab" commands so that users are allowed to change their crontab.

Additionally, it may be possible that you don't have "cron" service installed at all. In all cases kcron should warn the user, though, and the bug will stay open until those warnings have been added.
Comment 6 Christoph Feck 2010-10-20 15:10:43 UTC
SVN commit 1187805 by cfeck:

Show error message on failed save

We need to look at exitCode(), not exitStatus()
BUG: 238840


 M  +1 -1      ctSystemCron.cpp  
 M  +3 -3      ctcron.cpp  
 M  +1 -1      ctcron.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187805
Comment 7 Christoph Feck 2010-10-20 15:31:01 UTC
SVN commit 1187818 by cfeck:

Show error message when crontab could not be started

CCBUG: 238840


 M  +12 -2     ctcron.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187818