Show error message on failed save

We need to look at exitCode(), not exitStatus()
BUG: 238840

svn path=/trunk/KDE/kdeadmin/kcron/; revision=1187805